objects/SeptObject__c.object
<CustomObject>
    <fields>
        <fullName>SeptObject_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SeptObject Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SeptObject_Date_Time__c</fullName>
        <label>SeptObject Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SeptObject_Picklist__c</fullName>
        <label>SeptObject Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SeptObject</label>
    <nameField>
        <label>SeptObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SeptObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>